# Skynet-EDR

./: .gitleaks.toml  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  packaging-release.yml  release-artifacts.yml  scorecard.yml  security.yml
crates/skynet-edr-cli/: Cargo.toml
crates/skynet-edr-cli/src/: main.rs
crates/skynet-edr-cli/tests/: cli_smoke.rs  local_storage_cli.rs
crates/skynet-edr-core/: Cargo.toml
crates/skynet-edr-core/src/: lib.rs
crates/skynet-edr-core/tests/: alerting_response.rs  attack_sim_secret_egress.rs  canonical_event_schema.rs  canonical_spool_ingestion.rs  core_schema.rs  detection_rules.rs  hermes_event_ingestion.rs  local_storage.rs  product_info.rs  redaction_engine.rs
crates/skynet-edr-core/tests/fixtures/: canonical_event_v0.json  hermes_agent_golden_events_v0.jsonl  hermes_fake_malware_content_trace.json  hermes_secret_egress_trace.json  openclaw_agent_golden_events_v0.jsonl  risky_cron_background_job.yaml  suspicious_mcp_shell_egress.yaml
crates/skynet-edr-daemon/: Cargo.toml
crates/skynet-edr-daemon/src/: lib.rs  main.rs
crates/skynet-edr-daemon/tests/: daemon_smoke.rs  http_api.rs  linux_lab.rs  linux_lab_manual_workflows.rs  linux_passive_scanner.rs
crates/skynet-edr-mcp/: Cargo.toml
crates/skynet-edr-mcp/src/: lib.rs
crates/skynet-edr-mcp/tests/: mcp_surface.rs
docs/: ARCHITECTURE.md  CONCEPTS.md  DETECTIONS.md  DETECTION_RULES.md  EVENT_SCHEMA.md  GOALS.md  HERMES_EVENT_INGESTION.md  HERMES_PLUGIN_TELEMETRY.md  IMPLEMENTATION_PLAN.md  INSTALL.md  INTEGRATIONS.md  LINUX_LAB_TESTING.md  LOCAL_HTTP_API.md  LOCAL_STORAGE.md  MCP_READ_ONLY.md  OPENCLAW_INTEGRATION.md  OPERATIONS.md  PACKAGING.md  QUALITY_AND_SECURITY_ENGINEERING.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  REVIEW_POLICY.md  SECURITY_TOOLING_OPTIONS.md  THREAT_MODEL.md  WORKSPACE.md
integrations/hermes/skynet-edr/: README.md  __init__.py  plugin.yaml
integrations/hermes/tests/: test_skynet_edr_plugin.py
packaging/: nfpm.yaml
packaging/config/: config.toml
packaging/scripts/: build-packages.sh  build-tarball.sh  check-docs.py  inspect-artifacts.sh  package-postinstall.sh  skynet-edr-install-hermes-plugin.sh  validate-packaging.sh  vm-smoke.sh
packaging/systemd/: skynet-edr.service
packaging/sysusers/: skynet-edr.conf
packaging/tarball/: install.sh  uninstall.sh
packaging/tmpfiles/: skynet-edr.conf
