[workspace]
members = [
    "crates/skynet-edr-core",
    "crates/skynet-edr-cli",
    "crates/skynet-edr-daemon",
    "crates/skynet-edr-mcp",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/masterlf/Skynet-EDR"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
