[package]
name = "skynet-edr-cli"
description = "Command-line entry point for Skynet-EDR."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "skynet-edr"
path = "src/main.rs"

[dependencies]
skynet-edr-core = { version = "0.3.0", path = "../skynet-edr-core" }
serde_json = "1.0"

[lints]
workspace = true
