[package]
name = "skynet-edr-core"
description = "Core types and platform-independent primitives for Skynet-EDR."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
