[package]
name = "skynet-edr-daemon"
description = "Daemon entry point for Skynet-EDR runtime monitoring."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "skynet-edr-daemon"
path = "src/main.rs"

[dependencies]
skynet-edr-core = { version = "0.2.0", path = "../skynet-edr-core" }
skynet-edr-mcp = { version = "0.2.0", path = "../skynet-edr-mcp" }
serde_json = "1.0"

[lints]
workspace = true
