[package]
name = "skynet-edr-mcp"
description = "Read-only MCP integration primitives for Skynet-EDR."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
skynet-edr-core = { path = "../skynet-edr-core" }

[lints]
workspace = true
