[package]
name = "skynet-edr-mcp"
description = "Read-only MCP integration primitives for Skynet-EDR."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skynet-edr-core = { version = "0.1.0", path = "../skynet-edr-core" }

[lints]
workspace = true
